add gc tuning for parallalGC